FIXED 1. If you select any other file other than csv, it displays an error message in the popup 2. Uploads section now displays the complete name of the csv file along with size 3. The upload section is only visible when a file is uploaded else, it is hidden 4. Changed the alignment of the list of files in the uploaded section (added border, changed bg color, removed padding, increased margin) 5. Fixed the warnings that usually get displayed in the console

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -63,10 +63,9 @@ div.se-highlights {
 
 #uploadedFiles ul li{
     position: relative;
-    background-color:#e6e6e6;
-    border-top:1px solid #ccc;
-    border-bottom:1px solid #ccc;
-    height: 80px;
+    background-color:#f9f9f9;
+    border:1px solid #ccc;
+    min-height: 80px;
 }
 
 #uploadedFiles ul li input{
@@ -74,15 +73,13 @@ div.se-highlights {
 }
 
 #uploadedFiles ul li p{
-	width: 39em;
-	height: 3em;
-	word-wrap: break-word;
+    width: 78%;
     overflow: hidden;
     color: #333;
     font-size: 16px;
-    position: absolute;
-    top: 20px;
-    left: 100px;
+    word-break: break-all;
+    margin-left: 100px;
+    margin-top: 10px;
 }
 
 #uploadedFiles ul li i{
@@ -115,4 +112,12 @@ div.se-highlights {
 
 #uploadedFiles ul li.error p{
     color: #ec1010;
+}
+
+.files-table {
+    margin-top: 15px;
+}
+
+.files-table .panel {
+    padding: 0;
 }
